samples/_failures_safe/1761171793_8badb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bd0abc9.c: In function ‘main’:
./samples/SAFE/__tmp_7bd0abc9.c:153:38: error: expected ‘)’ at end of input
  153 |         if (fgets(input, sizeof(input
      |                                ~     ^
      |                                      )
./samples/SAFE/__tmp_7bd0abc9.c:153:13: error: too few arguments to function ‘fgets’
  153 |         if (fgets(input, sizeof(input
      |             ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_7bd0abc9.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_7bd0abc9.c:153:9: error: expected declaration or statement at end of input
  153 |         if (fgets(input, sizeof(input
      |         ^~
./samples/SAFE/__tmp_7bd0abc9.c:153:9: error: expected declaration or statement at end of input
